--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -63,5 +63,133 @@
 				"description": "Занимался добавлением нового функционала в приложение для доставки заказов, реализацией новых функций."
 			}
 		}
+	},
+	"projects": {
+		"title": "Мои проекты",
+		"description": "<0>Коллекция моих любимых проектов, которые я недавно разработал. Чувствую себя прекрасно, делясь здесь.</0><0>Коллекция моих любимых проектов, которые я недавно разработал. Чувствую себя прекрасно, делясь здесь.</0>",
+		"button": "Загрузи больше",
+		"items": {
+			"0": {
+				"title": "Зорро",
+				"position": "UI UX Design",
+				"description": "Дизайн взаимодействия Брендинг",
+				"year": "2021"
+			},
+			"1": {
+				"title": "Кана",
+				"position": "UI UX Design",
+				"description": "Разработка брендов",
+				"year": "2021"
+			}
+		}
+	},
+	"prising": {
+		"title": "Таблица цен",
+		"description": "<0> Вам интересно работать со мной? Вот мой прайс-лист на работы, связанные с дизайном. [Давайте поговорим] (https://www.google.com) о проекте! </0> <0> Donec imperdiet risus at toror consquat maximus et. </0>",
+		"tables": {
+			"0": {
+				"title": "На постоянной основе",
+				"subTitle": "Доступно на полную ставку",
+				"price": "$1200",
+				"button": "Найми меня",
+				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+			},
+			"1": {
+				"title": "Project Wise",
+				"subTitle": "Доступно для фриланса",
+				"price": "$400",
+				"button": "Найми меня",
+				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+			},
+			"2": {
+				"title": "Ежечасно",
+				"subTitle": "Доступно для базиса Хурли",
+				"price": "$60",
+				"button": "Найми меня",
+				"skills": "<0> Дизайн бренда </0> <0> Реклама </0> <0> Веб-разработка </0> <0> Фотография </0>"
+			}
+		},
+		"reviews": {
+			"0": {
+				"name": "Jennifer Smith",
+				"position": "CEO & Founder",
+				"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+			},
+			"1": {
+				"name": "Petra Smith",
+				"position": "CEO & Founder",
+				"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+			},
+			"2": {
+				"name": "Sandra Smith",
+				"position": "CEO & Founder",
+				"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+			},
+			"3": {
+				"name": "Ivan Smith",
+				"position": "CEO & Founder",
+				"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+			},
+			"4": {
+				"name": "Ketty Smith",
+				"position": "CEO & Founder",
+				"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+			}
+		}
+	},
+	"blog": {
+		"title": "Мой Блог",
+		"description": "<0> Коллекция моих любимых проектов, которые я недавно разработал. Прекрасное настроение, когда делюсь здесь. </0> <0> Donec imperdiet risus at toror consquat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. </0>",
+		"articles": [
+			{
+				"time": "8 мин на чтение",
+				"date": "16 May 2021",
+				"title": "Секреты удобства использования для создания лучших пользовательских интерфейсов",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Читать еще"
+			},
+			{
+				"time": "5 мин на чтение",
+				"date": "15 May 2021",
+				"title": "10 полезных советов по улучшению дизайна пользовательского интерфейса",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Читать еще"
+			},
+			{
+				"time": "12 мин на чтение",
+				"date": "14 May 2021",
+				"title": "Как стать успешным UI / UX дизайнером",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Читать еще"
+			}
+		]
+	},
+	"clients": {
+		"title": "Мои клиенты",
+		"description": "Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации."
+	},
+	"contact": {
+		"title": "Контакт со мной",
+		"description": "Есть вопрос? или просто хотите поздороваться? Напишите мне сообщение!",
+		"button": "Отправить сообщение",
+		"phone": {
+			"icon": "+800 234 5678",
+			"label": "Имя",
+			"placeholder": "Введите свое полное имя"
+		},
+		"email": {
+			"icon": "hi@robertlong.com",
+			"label": "Емаил",
+			"placeholder": "Введите ваш адрес электронной почты"
+		},
+		"message": {
+			"icon": "43rd Street River Point NY 1023",
+			"label": "Сообщение",
+			"placeholder": "Введите свой полный адрес"
+		}
+	},
+	"footer": {
+		"copyright": "© 2021 RobertLong.com, Все права защищены",
+		"designedBy": "Designed by WebDuck"
 	}
 }
