--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -66,5 +66,133 @@
 				"description": "Займався додаванням нового функціоналу в додаток для доставки замовлень, реалізацією нових функцій."
 			}
 		}
+	},
+	"projects": {
+		"title": "Мої проекти",
+		"description": "<0> Колекція моїх улюблених проектів, які я недавно розробив. Відчуваю себе чудово, ділячись тут. </0> <0> Колекція моїх улюблених проектів, які я недавно розробив. Відчуваю себе чудово, ділячись тут. </0>",
+		"button": "Завантаж більше",
+		"items": {
+			"0": {
+				"title": "Зорро",
+				"position": "UI UX Design",
+				"description": "Дизайн взаємодії Брендинг",
+				"year": "2021"
+			},
+			"1": {
+				"title": "Кана",
+				"position": "UI UX Design",
+				"description": "Розробка брендів",
+				"year": "2021"
+			}
+		}
+	},
+	"prising": {
+		"title": "Таблиця цін",
+		"description": "<0> Вам цікаво працювати зі мною? Ось мій прайс-лист на роботи, пов'язані з дизайном. [Давайте поговоримо] (https://www.google.com) про проект! </0> <0> Donec imperdiet risus at toror consquat maximus et. </0>",
+		"tables": {
+			"0": {
+				"title": "На постійній основі",
+				"subTitle": "Доступно на повну ставку",
+				"price": "$1200",
+				"button": "Найми мене",
+				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+			},
+			"1": {
+				"title": "Project Wise",
+				"subTitle": "Доступно для фрілансу",
+				"price": "$400",
+				"button": "Найми мене",
+				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+			},
+			"2": {
+				"title": "Щогодини",
+				"subTitle": "Доступно для базису Хурлі",
+				"price": "$60",
+				"button": "Найми мене",
+				"skills": "<0> Дизайн бренду </0> <0> Реклама </0> <0> Веб-розробка </0> <0> Фотографія </0>"
+			}
+		},
+		"reviews": {
+			"0": {
+				"name": "Jennifer Smith",
+				"position": "CEO & Founder",
+				"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+			},
+			"1": {
+				"name": "Petra Smith",
+				"position": "CEO & Founder",
+				"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+			},
+			"2": {
+				"name": "Sandra Smith",
+				"position": "CEO & Founder",
+				"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+			},
+			"3": {
+				"name": "Ivan Smith",
+				"position": "CEO & Founder",
+				"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+			},
+			"4": {
+				"name": "Ketty Smith",
+				"position": "CEO & Founder",
+				"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+			}
+		}
+	},
+	"blog": {
+		"title": "Мій Блог",
+		"description": "<0>Колекція моїх улюблених проектів, які я недавно розробив. Чудовий настрій, коли ділюся тут. </0> <0> Donec imperdiet risus at toror consquat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. </0>",
+		"articles": [
+			{
+				"time": "8 хв на читання",
+				"date": "16 May 2021",
+				"title": "Секрети зручності використання для створення кращих користувальницьких інтерфейсів",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Переглянути"
+			},
+			{
+				"time": "5 хв на читання",
+				"date": "15 May 2021",
+				"title": "10 корисних порад щодо поліпшення дизайну користувальницького інтерфейсу",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Переглянути"
+			},
+			{
+				"time": "12 хв на читання",
+				"date": "14 May 2021",
+				"title": "Як стати успішним UI / UX дизайнером",
+				"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+				"button": "Переглянути"
+			}
+		]
+	},
+	"clients": {
+		"title": "Мої Клієнти",
+		"description": "Давно з'ясовано, що при оцінці дизайну і композиції читається текст заважає зосередитися. Lorem Ipsum використовують тому, що той забезпечує більш-менш стандартний заповнення шаблону, а також реальний розподіл букв і пробілів в абзацах, яке не виходить за простій дублікації."
+	},
+	"contact": {
+		"title": "Контакт зі мною",
+		"description": "Є питання? або просто хочете привітатися? Напишіть мені по електронній пошті!",
+		"button": "Надіслати повідомлення",
+		"phone": {
+			"icon": "+800 234 5678",
+			"label": "Ім'я",
+			"placeholder": "Введіть своє повне ім'я"
+		},
+		"email": {
+			"icon": "hi@robertlong.com",
+			"label": "Пошта",
+			"placeholder": "Введіть Вашу email пошту"
+		},
+		"message": {
+			"icon": "43rd Street River Point NY 1023",
+			"label": "Повідомлення",
+			"placeholder": "Введіть адресу вашої електронної пошти"
+		}
+	},
+	"footer": {
+		"copyright": "© 2021 RobertLong.com, Всі права захищені",
+		"designedBy": "Designed by WebDuck"
 	}
 }
