--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,3 +1,30 @@
 {
-	"title": "Atyr Pridatko"
+	"title": "Atyr Pridatko",
+	"menu": [
+		{
+			"id": 0,
+			"name": "About",
+			"hash": "about"
+		},
+		{
+			"id": 1,
+			"name": "Resume",
+			"hash": "resume"
+		},
+		{
+			"id": 2,
+			"name": "Projects",
+			"hash": "projects"
+		},
+		{
+			"id": 3,
+			"name": "Blog",
+			"hash": "blog"
+		},
+		{
+			"id": 4,
+			"name": "Contact",
+			"hash": "contact"
+		}
+	]
 }
