--- a/locales/uk/common.json
+++ b/locales/uk/common.json
@@ -1,3 +1,30 @@
 {
-	"title": "Atyr Pridatko"
+	"title": "Atyr Pridatko",
+	"menu": [
+		{
+			"id": 0,
+			"name": "Про нас",
+			"hash": "about"
+		},
+		{
+			"id": 1,
+			"name": "Резюме",
+			"hash": "resume"
+		},
+		{
+			"id": 2,
+			"name": "Проекти",
+			"hash": "projects"
+		},
+		{
+			"id": 3,
+			"name": "Блог",
+			"hash": "blog"
+		},
+		{
+			"id": 4,
+			"name": "Контакти",
+			"hash": "contact"
+		}
+	]
 }
