--- a/locales/uk/blog.json
+++ b/locales/uk/blog.json
@@ -3,24 +3,38 @@
 	"description": "<0>A Collection of my favorites project I’ve designed recently. Feeling great while sharing here.</0><0>Donec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut.</0>",
 	"articles": [
 		{
-			"time": "8 Mins Read",
+			"time": "8",
 			"date": "16 May 2021",
 			"title": "Usability Secrets to Create Better User Interfaces",
-			"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+			"description": "<0>Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.</0>",
 			"button": "Read more"
 		},
 		{
-			"time": "5 Mins Read",
+			"time": "5",
 			"date": "15 May 2021",
 			"title": "10 Useful Tips to Improve Your UI Designs",
-			"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+			"description": "<0>Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.</0>",
 			"button": "Read more"
 		},
 		{
-			"time": "12 Mins Read",
+			"time": "12",
 			"date": "14 May 2021",
 			"title": "How to Become a Successful UI/UX Designer",
-			"description": "Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.",
+			"description": "<0>Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.</0>",
+			"button": "Read more"
+		},
+		{
+			"time": "8",
+			"date": "16 May 2021",
+			"title": "Usability Secrets to Create Better User Interfaces",
+			"description": "<0>Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.</0>",
+			"button": "Read more"
+		},
+		{
+			"time": "5",
+			"date": "15 May 2021",
+			"title": "10 Useful Tips to Improve Your UI Designs",
+			"description": "<0>Conec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo.</0>",
 			"button": "Read more"
 		}
 	]
