--- a/locales/en/project_zorro.json
+++ b/locales/en/project_zorro.json
@@ -10,6 +10,25 @@
 		"imgUrl": "/projects/zorro/zorro-origin.jpg"
 	},
 	"body": {
+		"images": [
+			"/projects/zorro/zorro-origin.jpg",
+			"/projects/zorro/zorro-origin.jpg",
+			"/projects/zorro/zorro-origin.jpg"
+		],
+		"technology": [
+			{
+				"title": "Branding",
+				"list": ["Logo Designing", "Model Photography", "Identity", "Typography", "Product Design"]
+			},
+			{
+				"title": "UX Experience",
+				"list": ["Art Direction", "Interaction Design", "User Interface Design", "Usability", "Marketing"]
+			},
+			{
+				"title": "Development",
+				"list": ["Front End Coding", "Website Development", "Mobile App Development", "QA Testing", "SEO Marketing"]
+			}
+		],
 		"problem": {
 			"title": "Problem",
 			"description": "<0>Iperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla vel eros. Donec euismod leo lectus, et euismod metus euismod sed. Quisque quis suscipit ipsum, at pellentesque velit. Duis a congue sem.</0><0>In sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer Cras iaculis, elit sit amet cursus consequat, tellus ligula egestas ante, eu vestibulum massa libero at purus. Suspendisse ac hendrerit magna. Nulla dignissim neque nunc, et malesuada massa semper id. Morbi eget justo ut dui auctor volutpat facilisis ac nequeam accumsan</0>"
@@ -17,6 +36,18 @@
 		"projectGoal": {
 			"title": "Project Goal",
 			"description": "<0>Curabitur laoreet pellentesque ex vitae aliquam. Curabitur rutrum est elit, eu eleifend mauris dignissim sit amet. Nam condimentum ac ex et gravida. Suspendisse a posuere leo. Nunc quis urna id risus ultricies aliquam. Duis diam risus, interdum ac arcu ac, tincidunt consectetur nunc. Nulla facilisi.</0><0>Donec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla vel eros. Donec euismod leo lectus, et euismod metus euismod sed. Quisque quis suscipit ipsum, at pellentesque velit. Duis a congue sem.</0><0>n sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer Cras iaculis, elit sit amet cursus consequat, tellus ligula egestas ante, eu vestibulum massa libero at purus. Suspendisse ac hendrerit magna. Nulla dignissim neque nunc, et malesuada massa semper id. Morbi eget justo ut dui auctor volutpat facilisis ac nequeam accumsan</0>"
+		},
+		"solution": {
+			"title": "Solution",
+			"description": "<0>Curabitur laoreet pellentesque ex vitae aliquam. Curabitur rutrum est elit, eu eleifend mauris dignissim sit amet. Nam condimentum ac ex et gravida. Suspendisse a posuere leo. Nunc quis urna id risus ultricies aliquam. Duis diam risus, interdum ac arcu ac, tincidunt consectetur nunc. Nulla facilisi.</0><0>Donec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla vel eros. Donec euismod leo lectus, et euismod metus euismod sed. Quisque quis suscipit ipsum, at pellentesque velit. Duis a congue sem.</0><0>n sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer Cras iaculis, elit sit amet cursus consequat, tellus ligula egestas ante, eu vestibulum massa libero at purus. Suspendisse ac hendrerit magna. Nulla dignissim neque nunc, et malesuada massa semper id. Morbi eget justo ut dui auctor volutpat facilisis ac nequeam accumsan</0>"
+		},
+		"result": {
+			"title": "Result",
+			"description": "<0>Curabitur laoreet pellentesque ex vitae aliquam. Curabitur rutrum est elit, eu eleifend mauris dignissim sit amet. Nam condimentum ac ex et gravida. Suspendisse a posuere leo. Nunc quis urna id risus ultricies aliquam. Duis diam risus, interdum ac arcu ac, tincidunt consectetur nunc. Nulla facilisi.</0><0>Donec imperdiet risus at tortor consequat maximus et eget magna. Cras ornare sagittis augue, id sollicitudin justo tristique ut. Nullam ex enim, euismod vel bibendum ultrices, fringilla vel eros. Donec euismod leo lectus, et euismod metus euismod sed. Quisque quis suscipit ipsum, at pellentesque velit. Duis a congue sem.</0><0>n sed dolor ut ligula malesuada sollicitudin. Morbi iaculis convallis arcu, nec maximus tellus sodales in. Curabitur blandit enim at nisl lobortis, non pretium enim hendrer Cras iaculis, elit sit amet cursus consequat, tellus ligula egestas ante, eu vestibulum massa libero at purus. Suspendisse ac hendrerit magna. Nulla dignissim neque nunc, et malesuada massa semper id. Morbi eget justo ut dui auctor volutpat facilisis ac nequeam accumsan</0>"
+		},
+		"performance": {
+			"title": "Unique and Attractive Branding for  Mozar.",
+			"imgUrl": "/projects/zorro/project-zorro.jpg"
 		}
 	},
 	"footer": {
