--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -2,7 +2,7 @@
 	"welcome": {
 		"title": "Артур Придатко",
 		"subtitle": "Фронт-енд разработчик",
-		"description": "Я фронт-енд разработчик из г. Сумы. Я люблю путешествовать, фотографировать и слушать музыку.",
+		"description": "Я веб разработчик из г.Сумы. Мне нравиться путешествовать, фотографировать и слушать музыку.",
 		"quickInformation": {
 			"0": {
 				"headline": "Родился в",
@@ -20,14 +20,15 @@
 	},
 	"about":{
 		"title": "Обо мне",
-		"description": "<0> Меня зовут Артур Придатко. Я изучаю Front-end с сентября 2019 года. Мне нравится создавать крутые проекты </0> <0> Основное направление - разработка интернет-магазинов с нуля, приложения доставки, CRM-панели для учета и редактирования товарных позиций. </0> <0> Большую часть работы я делаю front-end, но также делаю небольшую back-end для обработки запросов, работы с сервисами. </0>",
+		"description": "<0>Меня зовут Артур Придатко. Я начал изучать веб-разработку с 2019 года. Мне нравиться создавать простые интерфейсы, которые выполняют сложный функционал. Люблю экспериментировать с кодом, проверяю лучшие подходы, выбираю современные практики.</0><0>В основном я занимался разработкой небольших интернет-магазинов с нуля, приложений по доставке еды или услуг, CRM панелей для учёта и редактирования товарных позиций.</0><0>Большую часть работы я делаю front-end разработку, но я также немного делаю back-end для обработки запросов, работы с сервисами.</0><0>В процессе своей работы я хорошо понимаю, что хочет заказчик и пытаюсь найти лучшее решение в данный момент времени. Я люблю свою работу и хочу, чтобы мои заказчики были довольны тоже!</0>",
 		"button": "Посмотреть резюме",
 		"successProject": "Успешных проектов",
-		"happyClients": "Счасливых клиентов"
+		"happyClients": "Счасливых клиентов",
+		"awwardsWon": "Выигранных наград"
 	},
 	"resume": {
 		"title": "Резюме",
-		"resume": "<0>Разрабатываю админку электронного приложения для предприятий общественного питания. Я создаю и улучшаю интернет-магазины популярных сетей пиццерий, булочек и т. Д. Оформляю заявки на доставку товара.</0>",
+		"resume": "<0>Разработка e-commerce магазинов, CRM админ панелей для управления товаров, веб сайты, формы оплаты, авторизации, работа с настройкой СЕО сайта, google analytics и google tag manager.</0><0>Разработка одностраничных и многостраничных приложений и веб приложений используя современные инструменты разработки.</0>",
 		"button": "Скачать резюме",
 		"skills": {
 			"title": "Навыки",
@@ -54,7 +55,7 @@
 				"date": "2020 - сейчас",
 				"company": "Ithinkers",
 				"position": "Фронт/веб разработчик",
-				"description": "Разрабатываю админку электронного приложения для предприятий общественного питания. Я создаю и улучшаю интернет-магазины популярных сетей пиццерий, булочек и т. Д. Оформляю заявки на доставку товара."
+				"description": "Занимаюсь разработкой e-commerce магазинов, делаю приложения по доставке еды, разрабатываю CRM сайт по управлению продуктами."
 			},
 			"1": {
 				"date": "2019 - 2020",
