--- a/locales/uk/home.json
+++ b/locales/uk/home.json
@@ -2,7 +2,7 @@
 	"welcome": {
 		"title": "Артур Придатко",
 		"subtitle": "Фронт-енд розробник",
-		"description": "Я фронт-енд розробник із м. Суми. Я полюбляю подорожувати, фотографувати та слухати музику.",
+		"description": "Я розробник із м.Суми. Мені подобається подорожувати, фотографувати та слухати музику.",
 		"quickInformation": {
 			"0": {
 				"headline": "Народився в",
@@ -20,17 +20,18 @@
 	},
 	"about":{
 		"title": "Про мене",
-		"description": "<0> Мене звуть Артур Придатко. Я вивчаю Front-end з вересня 2019 року. Мені подобається створювати круті проекти </0> <0> Основний напрямок - розробка інтернет-магазинів з нуля, додатки доставки, CRM-панелі для обліку та редагування товарних позицій. </0> <0> Більшу частину роботи я роблю front-end, але також роблю невелику back-end для обробки запитів, роботи з сервісами. </0>",
+		"description": "<0>Мене звуть Артур Придатко. Я почав вивчати веб-розробку з 2019 року. Мне подобається створювати прості інтерфейси, які виконують складний функціонал. Люблю експериментувати з кодом, перевіряю кращі підходи, вибираю сучасні практики.</0><0>В основному я займався розробкою невеликих інтернет-магазинів з нуля, додатків з доставки їжі або послуг, CRM панелей для обліку та редагування товарних позицій.</0><0>Більшу частину роботи я роблю front-end розробку, але я також трохи роблю back-end для обробки запитів, роботи з сервісами.</0><0>В процесі своєї роботи я добре розумію, що хоче замовник і намагаюся знайти краще рішення в даний момент часу. Я люблю свою роботу і хочу, щоб мої замовники були задоволені теж!</0>",
 		"button": "Подивитися резюме",
 		"successProject": "Успішних проектів",
-		"happyClients": "Щасливих клієнтів"
+		"happyClients": "Щасливих клієнтів",
+		"awwardsWon": "Вигранних нагород"
 	},
 	"resume": {
 		"title": "Резюме",
 		"music": "Музика",
 		"travel": "Подорожі",
 		"photo": "Фото",
-		"resume": "<0>Розробляю админку електронного додатка для підприємств громадського харчування. Я створюю і покращують інтернет-магазини популярних мереж піцерій, булочок і т. Д Оформлюю заявки на доставку товару.</0>",
+		"resume": "<0>Розробка e-commerce магазинів, CRM адмін панелей для управління товарів, веб сайти, форми оплати, авторизації, робота з налаштуванням СЕО сайту, google analytics і google tag manager.</0><0>Розробка односторінкових і багатосторінкових додатків і веб додатків використовуючи сучасні інструменти розробки.</0>",
 		"button": "Скачати резюме",
 		"skills": {
 			"title": "Навички",
@@ -57,7 +58,7 @@
 				"date": "2020 - зараз",
 				"company": "Ithinkers",
 				"position": "Фронт/веб розробник",
-				"description": "Розробляю админку електронного додатка для підприємств громадського харчування. Я створюю і покращують інтернет-магазини популярних мереж піцерій, булочок і т. Д Оформлюю заявки на доставку товару."
+				"description": "Займаюся розробкою e-commerce магазинів, роблю додатки з доставки їжі, розробляю CRM сайт з управління продуктами."
 			},
 			"1": {
 				"date": "2019 - 2020",
