--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,5 +1,9 @@
 {
 	"title": "Atyr Pridatko",
+	"contacts": {
+		"phone": "+380500612126",
+		"email": "artyrpridatko@gmail.com"
+	},
 	"menu": [
 		{
 			"id": 0,
@@ -14,12 +18,14 @@
 		{
 			"id": 2,
 			"name": "Projects",
-			"hash": "projects"
+			"hash": null,
+			"url": "projects"
 		},
 		{
 			"id": 3,
 			"name": "Blog",
-			"hash": "blog"
+			"hash": null,
+			"url": "blog"
 		},
 		{
 			"id": 4,
